--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "css-loader": "^0.28.4",
+    "foundation-sites": "^6.4.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^1.14.0"
   },
   "scripts": {
