--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "foundation-sites": "^6.4.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
+    "script-loader": "^0.7.0",
     "style-loader": "^0.18.2",
     "webpack": "^1.14.0"
   },
